note to self: never work with height vh. I realized that working with vh messed up everything and I could not fit anything in the page. Fixed it

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 3vh;
+  height: 70px;
 }
 
 .header-left {
@@ -34,6 +34,7 @@ header {
 .header-right {
   padding-right: 650px;
 }
+
 ul {
   list-style-type: none;
   display: flex;
@@ -48,7 +49,7 @@ a {
 
 .hero {
   background-color: #1F2937;
-  height: 29vh;
+  height: 400px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -93,14 +94,50 @@ a {
   align-items: center;
 }
 
+
 .random {
-  height: 20vh;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.information {
+  
+  color: black;
+  font-weight: 900;
+  font-size: 36px;
+}
+
+.images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.first-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image{
+  border: 3px solid #3882F6;
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+}
+
+.image-subtext {
+  width: 100px;
 }
 
 
 .quote {
   background-color: #E5E7EB;
-  height: 20vh;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,7 +160,7 @@ a {
 }
 
 .sign-up {
-  height: 20vh; /* I know that is not needed*/
+  height: 300px; /* I know that is not needed*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -132,12 +169,11 @@ a {
 .box {
   background-color: #3882F6;
   width: 1000px;
-  height: 10vh;
+  height: 100px;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 30px;
 }
 
 .box-left {
@@ -168,6 +204,7 @@ a {
   border: 2px solid #F9FAF8;
 
 }
+
 
 footer {
   margin-top: auto;
